@@ -58,7 +58,7 @@ class ItemServiceImplTest {
 				.description("description")
 				.available(true)
 				.build();
-		Item itemEntity = ItemDtoMapper.toItemCreate(itemToSave);
+		Item itemEntity = ItemDtoMapper.ofItemCreateDto(itemToSave);
 		when(userService.getById(anyLong())).thenReturn(UserDto.builder().build());
 		when(itemRepository.save(itemEntity)).thenReturn(itemEntity);
 
@@ -75,13 +75,13 @@ class ItemServiceImplTest {
 		long userId = 1L;
 		User owner = User.builder().id(userId).build();
 		Item oldItem = Item.builder().id(itemId).name("name").description("description")
-				.available(true).user(owner).build();
+				.available(true).owner(owner).build();
 		Item newItem = Item.builder().id(itemId).name("name2").description("description")
-				.available(true).user(owner).build();
+				.available(true).owner(owner).build();
 		ItemUpdateDto itemUpdate = ItemUpdateDto.builder().id(itemId).name("name2")
 				.description("description").available(true).ownerId(userId).build();
 
-		when(userService.getById(userId)).thenReturn(UserDtoMapper.toDto(owner));
+		when(userService.getById(userId)).thenReturn(UserDtoMapper.toUserDto(owner));
 		when(itemRepository.findById(itemId)).thenReturn(Optional.of(oldItem));
 
 		when(itemRepository.save(any(Item.class))).thenReturn(newItem);
@@ -102,11 +102,11 @@ class ItemServiceImplTest {
 		User owner = User.builder().id(1L).build();
 		User notOwner = User.builder().id(userId).build();
 		Item oldItem = Item.builder().id(itemId).name("name").description("description")
-				.available(true).user(owner).build();
+				.available(true).owner(owner).build();
 		ItemUpdateDto itemUpdate = ItemUpdateDto.builder().id(itemId).name("name2")
 				.description("description").available(true).ownerId(userId).build();
 
-		when(userService.getById(userId)).thenReturn(UserDtoMapper.toDto(notOwner));
+		when(userService.getById(userId)).thenReturn(UserDtoMapper.toUserDto(notOwner));
 		when(itemRepository.findById(itemId)).thenReturn(Optional.of(oldItem));
 
 		assertThrows(AccessDeniedException.class, () -> itemService.update(itemUpdate));
@@ -121,13 +121,13 @@ class ItemServiceImplTest {
 		boolean newAvailability = false;
 		User owner = User.builder().id(userId).build();
 		Item oldItem = Item.builder().id(itemId).name("Old Name").description("Old Description")
-				.available(true).user(owner).build();
+				.available(true).owner(owner).build();
 		Item updatedItem = Item.builder().id(itemId).name(newName).description(newDescription)
-				.available(newAvailability).user(owner).build();
+				.available(newAvailability).owner(owner).build();
 		ItemUpdateDto itemUpdate = ItemUpdateDto.builder().id(itemId).name(newName)
 				.description(newDescription).available(newAvailability).ownerId(userId).build();
 
-		when(userService.getById(userId)).thenReturn(UserDtoMapper.toDto(owner));
+		when(userService.getById(userId)).thenReturn(UserDtoMapper.toUserDto(owner));
 		when(itemRepository.findById(itemId)).thenReturn(Optional.of(oldItem));
 		when(itemRepository.save(any(Item.class))).thenReturn(updatedItem);
 
@@ -146,12 +146,12 @@ class ItemServiceImplTest {
 		long userId = 1L;
 		UserDto userDto = UserDto.builder().id(userId).build();
 		Item item = Item.builder().id(itemId).name("name").description("description")
-				.available(true).user(UserDtoMapper.toUser(userDto)).build();
+				.available(true).owner(UserDtoMapper.ofUserDto(userDto)).build();
 
 		when(userService.getById(userId)).thenReturn(userDto);
 		when(itemRepository.findById(itemId)).thenReturn(Optional.of(item));
-		when(bookingRepository.findTop1ByItemUserIdAndStartDateBeforeAndStatusIn(anyLong(), any(), any(), any())).thenReturn(null);
-		when(bookingRepository.findTop1ByItemUserIdAndStartDateAfterAndStatusIn(anyLong(), any(), any(), any())).thenReturn(null);
+		when(bookingRepository.findTop1ByItemOwnerIdAndStartDateBeforeAndStatusIn(anyLong(), any(), any(), any())).thenReturn(null);
+		when(bookingRepository.findTop1ByItemOwnerIdAndStartDateAfterAndStatusIn(anyLong(), any(), any(), any())).thenReturn(null);
 		when(commentRepository.findAllByItemId(itemId)).thenReturn(null);
 
 		ItemWithFullInfoDto actualItemWithFullInfoDto = itemService.getById(itemId, userId);
@@ -174,12 +174,12 @@ class ItemServiceImplTest {
 		long itemId = 1L;
 		long ownerId = 1L;
 		User owner = User.builder().id(ownerId).build();
-		Item item = Item.builder().id(itemId).name("Test Item").user(owner).build();
+		Item item = Item.builder().id(itemId).name("Test Item").owner(owner).build();
 		Booking lastBooking = Booking.builder().id(1L).item(item).build();
 		Booking nextBooking = Booking.builder().id(2L).item(item).build();
-		when(bookingRepository.findTop1ByItemUserIdAndStartDateBeforeAndStatusIn(anyLong(), any(), any(), any()))
+		when(bookingRepository.findTop1ByItemOwnerIdAndStartDateBeforeAndStatusIn(anyLong(), any(), any(), any()))
 				.thenReturn(lastBooking);
-		when(bookingRepository.findTop1ByItemUserIdAndStartDateAfterAndStatusIn(anyLong(), any(), any(), any()))
+		when(bookingRepository.findTop1ByItemOwnerIdAndStartDateAfterAndStatusIn(anyLong(), any(), any(), any()))
 				.thenReturn(nextBooking);
 		when(itemRepository.findById(itemId)).thenReturn(Optional.of(item));
 
@@ -198,7 +198,7 @@ class ItemServiceImplTest {
 		long itemId = 1L;
 		long userId = 1L;
 		User owner = User.builder().id(2L).build();
-		Item item = Item.builder().id(itemId).name("Test Item").user(owner).build();
+		Item item = Item.builder().id(itemId).name("Test Item").owner(owner).build();
 
 		when(itemRepository.findById(itemId)).thenReturn(Optional.of(item));
 
@@ -221,13 +221,13 @@ class ItemServiceImplTest {
 		Pageable page = PageRequest.of(0, 1);
 
 		when(userService.getById(userId)).thenReturn(owner);
-		when(itemRepository.findByUserId(userId)).thenReturn(itemList);
-		when(bookingRepository.findByItemIdAndEndDateBeforeOrderByEndDateDesc(any(), any(), any(Pageable.class)))
-				.thenReturn(new PageImpl<>(List.of(), page, 1));
-		when(bookingRepository.findByItemIdAndStartDateAfterOrderByStartDateAsc(any(), any(), any(Pageable.class)))
-				.thenReturn(new PageImpl<>(List.of(), page, 1));
+		when(itemRepository.findByOwnerId(userId)).thenReturn(itemList);
+		when(bookingRepository.findByItemIdAndEndDateBeforeOrderByEndDateDesc(any(), any()))
+				.thenReturn(List.of());
+		when(bookingRepository.findByItemIdAndStartDateAfterOrderByStartDateAsc(any(), any()))
+				.thenReturn(List.of());
 
-		List<ItemWithFullInfoDto> result = itemService.getUserItems(userId, page);
+		List<ItemWithFullInfoDto> result = itemService.findByOwnerId(userId, page);
 
 		assertEquals(0, result.size());
 	}
@@ -239,17 +239,17 @@ class ItemServiceImplTest {
 		Pageable page = PageRequest.of(0, 1);
 
 		List<Item> itemList = Arrays.asList(
-				Item.builder().id(1L).name("Item 1").user(user).build(),
-				Item.builder().id(2L).name("Item 2").user(user).build(),
-				Item.builder().id(3L).name("Item 3").user(user).build());
-		when(userService.getById(userId)).thenReturn(UserDtoMapper.toDto(user));
-		when(itemRepository.findByUserId(userId)).thenReturn(itemList);
-		when(bookingRepository.findByItemIdAndEndDateBeforeOrderByEndDateDesc(any(), any(), any(Pageable.class)))
-				.thenReturn(new PageImpl<>(List.of(), page, 1));
-		when(bookingRepository.findByItemIdAndStartDateAfterOrderByStartDateAsc(any(), any(), any(Pageable.class)))
-				.thenReturn(new PageImpl<>(List.of(), page, 1));
+				Item.builder().id(1L).name("Item 1").owner(user).build(),
+				Item.builder().id(2L).name("Item 2").owner(user).build(),
+				Item.builder().id(3L).name("Item 3").owner(user).build());
+		when(userService.getById(userId)).thenReturn(UserDtoMapper.toUserDto(user));
+		when(itemRepository.findByOwnerId(userId)).thenReturn(itemList);
+		when(bookingRepository.findByItemIdAndEndDateBeforeOrderByEndDateDesc(any(), any()))
+				.thenReturn(List.of());
+		when(bookingRepository.findByItemIdAndStartDateAfterOrderByStartDateAsc(any(), any()))
+				.thenReturn(List.of());
 
-		List<ItemWithFullInfoDto> actualItems = itemService.getUserItems(userId, page);
+		List<ItemWithFullInfoDto> actualItems = itemService.findByOwnerId(userId, page);
 
 		assertEquals(itemList.size(), actualItems.size());
 	}
@@ -260,14 +260,14 @@ class ItemServiceImplTest {
 		User user = User.builder().id(userId).build();
 		Pageable page = PageRequest.of(0, 1);
 
-		when(userService.getById(userId)).thenReturn(UserDtoMapper.toDto(user));
-		when(itemRepository.findByUserId(userId)).thenReturn(Collections.emptyList());
-		when(bookingRepository.findByItemIdAndEndDateBeforeOrderByEndDateDesc(any(), any(), any(Pageable.class)))
-				.thenReturn(new PageImpl<>(List.of(), page, 1));
-		when(bookingRepository.findByItemIdAndStartDateAfterOrderByStartDateAsc(any(), any(), any(Pageable.class)))
-				.thenReturn(new PageImpl<>(List.of(), page, 1));
+		when(userService.getById(userId)).thenReturn(UserDtoMapper.toUserDto(user));
+		when(itemRepository.findByOwnerId(userId)).thenReturn(Collections.emptyList());
+		when(bookingRepository.findByItemIdAndEndDateBeforeOrderByEndDateDesc(any(), any()))
+				.thenReturn(List.of());
+		when(bookingRepository.findByItemIdAndStartDateAfterOrderByStartDateAsc(any(), any()))
+				.thenReturn(List.of());
 
-		List<ItemWithFullInfoDto> actualItems = itemService.getUserItems(userId, page);
+		List<ItemWithFullInfoDto> actualItems = itemService.findByOwnerId(userId, page);
 
 		assertTrue(actualItems.isEmpty());
 	}
@@ -279,7 +279,7 @@ class ItemServiceImplTest {
 		String text = "item";
 		Pageable page = PageRequest.of(0, 1);
 		UserDto user = UserDto.builder().id(userId).build();
-		ItemDto itemDto = ItemDto.builder().id(itemId).name("item").ownerId(userId).build();
+		ItemDto itemDto = ItemDto.builder().id(itemId).name("item").build();
 		Item item = Item.builder().id(itemId).name("item").build();
 		when(userService.getById(userId)).thenReturn(user);
 		when(itemRepository.findByNameOrDescriptionContainingAndAvailableTrue(text.toLowerCase(), page)).thenReturn(new PageImpl<>(List.of(item), page, 1));
@@ -298,13 +298,13 @@ class ItemServiceImplTest {
 			String text = "comment";
 			UserDto author = UserDto.builder().id(userId).build();
 			Item item = Item.builder()
-					.id(itemId).name("item").user(UserDtoMapper.toUser(author)).build();
+					.id(itemId).name("item").owner(UserDtoMapper.ofUserDto(author)).build();
 			Booking booking = Booking.builder().id(1L).item(item).build();
 
 			CommentRequestDto commentRequestDto = CommentRequestDto.builder()
 					.authorId(userId).itemId(itemId).text(text).build();
 			Comment comment = Comment.builder()
-					.author(UserDtoMapper.toUser(author)).item(item).text(text).build();
+					.author(UserDtoMapper.ofUserDto(author)).item(item).text(text).build();
 
 			when(userService.getById(userId)).thenReturn(author);
 			when(itemRepository.findById(itemId)).thenReturn(Optional.of(item));
@@ -326,7 +326,7 @@ class ItemServiceImplTest {
 		String text = "comment";
 		UserDto author = UserDto.builder().id(userId).build();
 		Item item = Item.builder()
-				.id(itemId).name("item").user(UserDtoMapper.toUser(author)).build();
+				.id(itemId).name("item").owner(UserDtoMapper.ofUserDto(author)).build();
 
 		CommentRequestDto commentRequestDto = CommentRequestDto.builder()
 				.authorId(userId).itemId(itemId).text(text).build();
